--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "bootstrap": "^4.5.3",
     "express": "^4.16.3",
     "if-env": "^1.0.4",
+    "mongoose-global": "^1.0.1",
     "react-bootstrap": "^1.4.0"
   }
 }
