--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "concurrently": "^4.1.0",
+    "concurrently": "^5.3.0",
     "nodemon": "^1.18.7"
   },
   "dependencies": {
@@ -25,6 +25,9 @@
     "express": "^4.16.3",
     "if-env": "^1.0.4",
     "mongoose-global": "^1.0.1",
-    "react-bootstrap": "^1.4.0"
+    "react-bootstrap": "^1.4.0",
+    "react-bootstrap-carousel": "^4.1.0",
+    "react-slick": "^0.27.13",
+    "slick-carousel": "^1.8.1"
   }
 }
