--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "nodemon": "^1.18.7"
   },
   "dependencies": {
+    "angular-bootstrap-md": "^10.0.0",
     "axios": "^0.21.0",
     "bootstrap": "^4.5.3",
     "express": "^4.16.3",
