--- a/package.json
+++ b/package.json
@@ -22,18 +22,29 @@
   "dependencies": {
     "angular-bootstrap-md": "^10.0.0",
     "axios": "^0.21.0",
+    "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
     "bootstrap": "^4.5.3",
+    "compression": "^1.7.4",
+    "cookie-parser": "^1.4.5",
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "email-validator": "^2.0.4",
     "express": "^4.17.1",
+    "express-mongo-sanitize": "^2.0.0",
     "express-stormpath": "^4.0.0",
     "formik": "^2.2.5",
     "if-env": "^1.0.4",
+    "helmet": "^4.2.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose-global": "^1.0.1",
+    "morgan": "^1.10.0",
     "react-bootstrap": "^1.4.0",
     "react-bootstrap-carousel": "^4.1.0",
     "react-slick": "^0.27.13",
     "slick-carousel": "^1.8.1",
+    "slugify": "^1.4.6",
+    "xss-clean": "^0.1.1",
     "yup": "^0.30.0"
   }
 }
