--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "client": "cd client && npm run start",
     "seed": "node scripts/seedDB.js",
     "install": "cd client && npm install",
-    "heroku-postbuild": "npm run build"
+    "build": "cd client && npm run build"
+    
   },
   "author": "",
   "license": "ISC",
