--- a/config.env
+++ b/config.env
@@ -1,4 +1,4 @@
-DB_CONNECTION=mongodb+srv://<username>:<password>@cluster0.stx9e.mongodb.net/<dbname>?retryWrites=true&w=majority
+DB_CONNECTION=mongodb://<username>:<password>@cluster0.stx9e.mongodb.net/<dbname>?retryWrites=true&w=majority
 
 DB_NAME=travelsite
 DB_USERNAME=travelsite-admin
