--- a/package.json
+++ b/package.json
@@ -34,10 +34,11 @@
     "express-mongo-sanitize": "^2.0.0",
     "express-stormpath": "^4.0.0",
     "formik": "^2.2.5",
-    "if-env": "^1.0.4",
     "helmet": "^4.2.0",
+    "if-env": "^1.0.4",
     "jsonwebtoken": "^8.5.1",
-    "mongoose-global": "^1.0.1",
+    "mongodb": "^3.6.3",
+    "mongoose": "^5.10.15",
     "morgan": "^1.10.0",
     "react-bootstrap": "^1.4.0",
     "react-bootstrap-carousel": "^4.1.0",
